# test-pao

./: .gitignore  README.md
davide/test1/: customcomponent.cpp  customcomponent.h  genericqueque.cpp  genericqueque.h  genericworker.cpp  test1.pro  testworker.cpp
davide/test2/: genericworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  workerqueque.cpp  workerqueque.h
davide/test_saving_data/: CMakeLists.txt  main.cpp  mainwindow.h  myclass.cpp  myclass.h  myclass2.cpp  myclass2.h
davide/test_saving_data/view/mainview/: ModifyView.cpp  SideBarWidget.cpp  ViewAbstract.h
davide/testcmake/: CMakeLists.txt  mainwindow.cpp
davide/testcmake2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
davide/testcmake2/view/mainview/: ContainerManagerAbstract.cpp  ContainerManagerAbstract.h  CreateView.cpp  CreateView.h  MainContentWidget.cpp  MainContentWidget.h  ModifyView.h  SideBarWidget.cpp  SideBarWidget.h  ViewAbstract.cpp
luca/: .gitignore
luca/Serialization/: Serialization.pro  customdata.cpp  customdata.h  custominnerdata.cpp  custominnerdata.h  mainwindow.cpp  mainwindow.h
luca/Test3/: CMakeLists.txt
luca/TestCharts/: TestCharts.pro  customgraph.cpp  customgraph.h  mainwindow.cpp  mainwindow.h  testwidget.cpp  testwidget.h
luca/realtime_charts/src/: CustomChart.cpp  CustomChart.h  mainwindows.cpp  mainwindows.h
luca/test-1/: Resources.qrc  buttongroup.cpp  buttongroup.h  customio.cpp  customio.h  main.cpp  mainwindow.cpp  mainwindow.ui  test-1.pro  test.json
luca/test-2/: CMakeLists.txt  CustomIO.cpp  CustomIO.h  MainWindow.cpp  MainWindow.h  main.cpp
